dedrv/tests/units/accessor_after_drop.stderr
error: unexpected closing delimiter: `}`
  --> tests/units/accessor_after_drop.rs:14:1
   |
14 | }
   | ^ unexpected closing delimiter
